tests/snapshots/examples_fixtures/type_system__failing__184_type_expr_missing_close_paren.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/184_type_expr_missing_close_paren.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Closing Delimiter

Expected `)` to close tuple type.

  examples/type_system/failing/184_type_expr_missing_close_paren.flx:45:31
   |
45 | fn bad(x: (Int, String -> Int { x }
   |                               ^

Hint:
  Tuple types use `(A, B, ...)`.

Note:
  while parsing function `bad`


error[E034]: Missing Function Body

This function body needs to start with `{`.

  examples/type_system/failing/184_type_expr_missing_close_paren.flx:45:35
   |
45 | fn bad(x: (Int, String -> Int { x }
   |                                   ^
   |                                   - This looks like the function body

   | - `bad` starts here

Note:
  while parsing function `bad`

Help:
  Try adding `{` after the function signature.

Found 2 errors.
== stdout ==
<not executed>
